--- a/src/blog.css
+++ b/src/blog.css
@@ -1,50 +1,58 @@
-.blogcontainer{
+.blogcontainer {
     justify-content: center;
     flex-wrap: wrap;
 }
-.blogcard{
+
+.blogcard {
     width: 300px;
     margin: 20px;
 }
-.imagesss2{
-    background-image: url(./images/6.jpg);
-    background-size: cover;
-    background-position: center;
-}
-.imagesss1{
-    background-image: url(./images/home.jpg);
-    background-size: cover;
-    background-position: center;
-}
-.blogbg{
-    background-image: url(./images/4.jpg);
-    background-size: cover;
-    background-position: 10%;
-}
-#blogcontact{
-    padding-top:120px;
+
+#blogcontact {
+    padding-top: 120px;
+    text-shadow: -1px 1px 1px black;
 }
 
-@media(max-width:400px){
-    #blogcontact{
-        padding-top:150px !important;
+@media(max-width:400px) {
+    #blogcontact {
+        padding-top: 150px !important;
     }
 }
 
 @media(max-width:800px) {
-    .blogcard{
-        width: 90%;
-        margin: 20px;
-    }
-}
-@media(max-width:760px) {
-    .blogcard{
+    .blogcard {
         width: 90%;
         margin: 20px;
     }
 }
 
-.socialicons{
+@media(max-width:760px) {
+    .blogcard {
+        width: 90%;
+        margin: 20px;
+    }
+}
+
+.socialicons {
     height: 7vh !important;
     width: 7vh !important;
+}
+
+@media(max-width:800px) {
+    .blogtoleft {
+        position:relative !important;
+        left: -3% !important;
+        /* background-color: red !important; */
+    }
+}
+
+.imgblogbg{
+    background-size: cover ;
+    background-position: center;
+}
+
+.blogbg{
+    background-image: url(./images/blogbg.jpg);
+    background-position: center;
+    background-size: cover;
 }
