--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .homeSection2 {
@@ -36,13 +36,13 @@ body {
 
 .icon-box-cell p {
     font-size: 20px;
-    transform: translateY(-10px) translate(6px)
+    transform: translateY(-12px) translate(5px)
 }
 
 #hrline {
-    height: 80px;
+    height: 90px;
     margin-left: 10px;
-    margin-top: 25px;
+    margin-top: 12px;
     width: 2px;
     background: white;
 }
