--- a/src/login.css
+++ b/src/login.css
@@ -195,7 +195,7 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background-image: url(./images/6.jpg);
+  background-image: url(./images/bg-01.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -207,9 +207,6 @@ iframe {
   border-radius: 10px;
   overflow: hidden;
 }
-
-
-
 
 .login100-form {
   width: 100%;
