--- a/src/testimony.css
+++ b/src/testimony.css
@@ -71,3 +71,9 @@
     }
 }
 
+@media(max-width:400px) {
+    .tesmonyitems1 {
+        /* position:relative !important; */
+        left: -5%;
+    }
+}
